--- a/app/travellist/webapp/i18n/i18n.properties
+++ b/app/travellist/webapp/i18n/i18n.properties
@@ -3,11 +3,11 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Travel List
+appTitle=Manage Travel Lists
 
 #YDES: Application description
 appDescription=SAP Fiori Elements
 
-flpTitle=Travel List
+flpTitle=Manage Travel Lists
 
 flpSubtitle=Demo
